feat: add favorite field and refactoring
