# pkg/models/models.go
@@ -12,6 +12,7 @@ package models
 
 import (
 	"github.com/golang-jwt/jwt"
+	"github.com/k4sper1love/watchlist-api/pkg/filters"
 	"time"
 )
 
@@ -60,8 +61,9 @@ type Collection struct {
 
 // Film represents a film with its details and user-specific attributes.
 type Film struct {
-	ID          int       `json:"id"  example:"1"`                                                                     // Unique identifier for the film.
-	UserID      int       `json:"user_id" example:"1"`                                                                 // Identifier of the user who added the film.
+	ID          int       `json:"id"  example:"1"`     // Unique identifier for the film.
+	UserID      int       `json:"user_id" example:"1"` // Identifier of the user who added the film.
+	IsFavorite  bool      `json:"is_favorite" example:"false"`
 	Title       string    `json:"title" validate:"required,min=3,max=100" example:"My film"`                           // Title of the film; required, between 3 and 100 characters.
 	Year        int       `json:"year,omitempty" validate:"omitempty,gte=1888,lte=2100" example:"2001"`                // Release year of the film; optional, must be between 1888 and 2100.
 	Genre       string    `json:"genre,omitempty" validate:"omitempty,max=100" example:"Horror"`                       // Genre of the film; optional.
@@ -69,7 +71,7 @@ type Film struct {
 	Rating      float64   `json:"rating,omitempty" validate:"omitempty,gte=1,lte=10" example:"6.7"`                    // Rating of the film; optional, must be between 1 and 10.
 	ImageURL    string    `json:"image_url,omitempty" validate:"omitempty,url" example:"https://placeimg.com/640/480"` // URL of the film's image; optional, must be a valid URL.
 	Comment     string    `json:"comment,omitempty" validate:"omitempty,max=500" example:"This is comment"`            // User's comment of the film; optional, up to 500 characters.
-	IsViewed    bool      `json:"is_viewed" example:"false"`                                                           // Indicates if the user has viewed the film.
+	IsViewed    bool      `json:"is_viewed" example:"true"`                                                            // Indicates if the user has viewed the film.
 	UserRating  float64   `json:"user_rating,omitempty" validate:"omitempty,gte=1,lte=10" example:"5.5"`               // User's rating of the film; optional, between 1 and 10.
 	Review      string    `json:"review,omitempty" validate:"omitempty,max=500" example:"This is review"`              // User's review of the film; optional, up to 500 characters.
 	URL         string    `json:"url,omitempty" validate:"omitempty,url" example:"https://www.imdb.com/video"`         // URL for additional film information (e.g., IMDb or trailer); optional, must be valid.
@@ -89,4 +91,17 @@ type CollectionFilm struct {
 type CollectionFilms struct {
 	Collection Collection `json:"collection"` // Identifier of the collection.
 	Films      []Film     `json:"films"`      // Identifier of the film.
+}
+
+// FilmsQueryInput holds the parameters for querying films, including title, rating range, and filter options.
+type FilmsQueryInput struct {
+	filters.Filters
+	Title             string
+	ExcludeCollection int
+	Rating            string
+	Year              string
+	IsViewed          *bool
+	UserRating        string
+	HasURL            *bool
+	IsFavorite        *bool
 }
